--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
             <div class="lake-text">TERKHIIN TSAGAAN LAKE</div>
           </div>
           <div class="rectangle">
-            <img src="./image/terkh.png" alt="" width="275.49" height="370px" />
+            <img
+              src="./image/terkh.png"
+              alt=""
+              width="275.49"
+              height="370px"
+              class="img-4"
+            />
           </div>
         </div>
 
@@ -51,7 +57,13 @@
           </div>
 
           <div class="rectangle-1">
-            <img src="./amar.png" alt="" width="275.49px" height="370px" />
+            <img
+              src="./amar.png"
+              alt=""
+              width="275.49px"
+              height="370px"
+              class="img-4"
+            />
           </div>
         </div>
 
@@ -60,7 +72,13 @@
             <div class="huvsgul-lake">KHUVSGUL LAKE</div>
           </div>
           <div class="rectangle-2">
-            <img src="./image/lake.png" alt="" width="276px" height="370px" />
+            <img
+              src="./image/lake.png"
+              alt=""
+              width="276px"
+              height="370px"
+              class="img-4"
+            />
           </div>
         </div>
 
@@ -74,12 +92,42 @@
               alt=""
               width="275.49px"
               height="370px"
+              class="img-4"
             />
           </div>
         </div>
       </section>
 
-      <section class="road-map-image"></section>
+      <section class="road-map-image">
+        <div class="destination">
+          <div class="dest-text">Destination of Our Agency</div>
+          <div class="pack-text">Pack Your Bags And Get Ready</div>
+        </div>
+
+        <div class="frame-5">
+          <div class="left-cont">
+            <div class="block-1">
+              <div class="inside-cont">
+                Sukhbaatar Square
+                <div class="text-5">
+                  <img
+                    src="./image/Icon black 2.png"
+                    alt=""
+                    width="14px"
+                    height="14px"
+                  />Ulaanbator
+                </div>
+              </div>
+              <div class="day-1">DAY1</div>
+            </div>
+
+            <div class="block-2"></div>
+            <div class="block-3"></div>
+            <div class="block-4"></div>
+            <div class="block-5"></div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
