--- a/index.html
+++ b/index.html
@@ -118,13 +118,65 @@
                   />Ulaanbator
                 </div>
               </div>
-              <div class="day-1">DAY1</div>
+              <div class="day-1">DAY 1</div>
             </div>
 
-            <div class="block-2"></div>
-            <div class="block-3"></div>
-            <div class="block-4"></div>
-            <div class="block-5"></div>
+            <div class="block-2">
+              <div class="inside-cont-1">
+                Amarbaysgalant monastery
+                <div class="text-6">
+                  <img
+                    src="./image/Icon black 2.png"
+                    alt=""
+                    width="14px"
+                    height="14px"
+                  />Bulgan
+                </div>
+              </div>
+              <div class="day-2">DAY 2</div>
+            </div>
+            <div class="block-3">
+              <div class="inside-cont-2">
+                Khorgiin togoo
+                <div class="text-7">
+                  <img
+                    src="./image/Icon black 2.png"
+                    alt=""
+                    width="14px"
+                    height="14px"
+                  />Arkhangai
+                </div>
+              </div>
+              <div class="day-3">DAY 3</div>
+            </div>
+            <div class="block-4">
+              <div class="inside-cont-3">
+                Terkhiin tsagaan lake
+                <div class="text-8">
+                  <img
+                    src="./image/Icon black 2.png"
+                    alt=""
+                    width="14px"
+                    height="14px"
+                  />Arkhangai
+                </div>
+              </div>
+              <div class="day-4">DAY 4</div>
+            </div>
+            <div class="block-5">
+              <div class="inside-cont-4">
+                Khuvsgul
+                <div class="text-9">
+                  <img
+                    src="./image/Icon black 2.png"
+                    alt=""
+                    width="14px"
+                    height="14px"
+                  />Khuvsgul
+                </div>
+              </div>
+              <div class="day-5">DAY 5</div>
+            </div>
           </div>
         </div>
       </section>
