--- a/index.html
+++ b/index.html
@@ -99,6 +99,41 @@
       </section>
 
       <section class="road-map-image">
+        <img
+          src="./image/MapPin 1.png"
+          alt=""
+          width="34px"
+          height="34px"
+          class="aa img"
+        />
+        <img
+          src="./image/MapPin 1.png"
+          alt=""
+          width="34px"
+          height="34px"
+          class="bb img"
+        />
+        <img
+          src="./image/MapPin 1.png"
+          alt=""
+          width="34px"
+          height="34px"
+          class="cc img"
+        />
+        <img
+          src="./image/MapPin 1.png"
+          alt=""
+          width="34px"
+          height="34px"
+          class="dd img"
+        />
+        <img
+          src="./image/MapPin 1.png"
+          alt=""
+          width="34px"
+          height="34px"
+          class="ff img"
+        />
         <div class="destination">
           <div class="dest-text">Destination of Our Agency</div>
           <div class="pack-text">Pack Your Bags And Get Ready</div>
@@ -180,6 +215,15 @@
           </div>
         </div>
       </section>
+
+      <div class="bottom-backround">
+        <div class="top-pricing">
+          <h1>Pricing of Our Agency</h1>
+          <h2>Choose A Package That's Right For you</h2>
+        </div>
+
+        <div class="prices"></div>
+      </div>
     </div>
   </body>
 </html>
