--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           <div class="rectangle-1">
             <img
-              src="./amar.png"
+              src="./image/amar.png"
               alt=""
               width="275.49px"
               height="370px"
@@ -212,6 +212,19 @@
               </div>
               <div class="day-5">DAY 5</div>
             </div>
+            <div class="picture-parents">
+              <div class="sukh-img">
+                <img
+                  src="./image/Frame 176.png"
+                  alt=""
+                  width="200px"
+                  height="200px"
+                />
+              </div>
+              <div class="package">
+                <button>select</button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -222,8 +235,235 @@
           <h2>Choose A Package That's Right For you</h2>
         </div>
 
-        <div class="prices"></div>
+        <div class="prices">
+          <div class="package-child-1">
+            <div class="pack-header">
+              <div class="heart-icon">
+                <img
+                  src="./image/IconButton 1.png"
+                  alt=""
+                  width="36px"
+                  height="36px"
+                />
+                <div class="tex-10">Budget package</div>
+              </div>
+            </div>
+            <div class="pack-content">
+              <div class="pack-cont-child">
+                <div class="jj">
+                  <div class="text-11">500$</div>
+                  <div class="text-12">Essantials Covered</div>
+                </div>
+                <div class="cont-child-9">
+                  <div class="text-13">includes:</div>
+
+                  <div class="text-14">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+
+                    <p>Group transportation(shared van/bus)</p>
+                  </div>
+                  <div class="text-15">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Standard accommdotation(yurt or geusthouse)</p>
+                  </div>
+                  <div class="text-16">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Guided lake tour</p>
+                  </div>
+                  <div class="text-17">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>1 meal per day(breakfast)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="select">Select package</div>
+            </div>
+          </div>
+
+          <div class="package-child-1">
+            <div class="pack-header">
+              <div class="heart-icon">
+                <img
+                  src="./image/IconButton 1.png"
+                  alt=""
+                  width="36px"
+                  height="36px"
+                />
+                <div class="tex-10">Standard Package</div>
+              </div>
+            </div>
+            <div class="pack-content">
+              <div class="pack-cont-child">
+                <div class="jj">
+                  <div class="text-11">800$</div>
+                  <div class="text-12">
+                    Balanced Adventure
+                    <div class="pop">Popular</div>
+                  </div>
+                </div>
+                <div class="cont-child-9">
+                  <div class="text-13">includes:</div>
+
+                  <div class="text-14">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+
+                    <p>Comfortable transportation (mini-bus)</p>
+                  </div>
+                  <div class="text-15">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Mid-range accommodation (private yurt or lodge)</p>
+                  </div>
+                  <div class="text-16">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Guided lake tour + nearby hiking</p>
+                  </div>
+                  <div class="text-17">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>2 meals per day (breakfast and dinner)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="select">Select package</div>
+            </div>
+          </div>
+          <div class="package-child-1">
+            <div class="pack-header">
+              <div class="heart-icon">
+                <img
+                  src="./image/IconButton 1.png"
+                  alt=""
+                  width="36px"
+                  height="36px"
+                />
+                <div class="tex-10">Luxury package</div>
+              </div>
+            </div>
+            <div class="pack-content">
+              <div class="pack-cont-child">
+                <div class="jj">
+                  <div class="text-11">1200$</div>
+                  <div class="text-12">Ultimate Comfort</div>
+                </div>
+                <div class="cont-child-9">
+                  <div class="text-13">includes:</div>
+
+                  <div class="text-14">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+
+                    <p>Private transportation (SUV)</p>
+                  </div>
+                  <div class="text-15">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Luxury accommodation (lakefront lodge)</p>
+                  </div>
+                  <div class="text-16">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>Guided tours (lake + reindeer herder experience)</p>
+                  </div>
+                  <div class="text-17">
+                    <img
+                      src="./image/check.png"
+                      alt=""
+                      width="20px"
+                      height="20px"
+                    />
+                    <p>All meals included (local cuisine)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="select">Select package</div>
+            </div>
+          </div>
+        </div>
       </div>
+      <footer>
+        <div class="footer">
+          <div class="footer-child">
+            <div class="social">
+              <div class="ins">
+                <img
+                  src="./image/Facebook Icon.png"
+                  alt=""
+                  width="24px"
+                  height="24px"
+                />Facebook
+              </div>
+              <div class="fb">
+                <img
+                  src="./image/Instagram Icon.png"
+                  alt=""
+                  width="24px"
+                  height="24px"
+                />instagram
+              </div>
+            </div>
+
+            <div class="logo">
+              <img
+                src="./image/loogoo.png"
+                alt=""
+                width="101px"
+                height="35px"
+              />
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
