--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <section class="text-title">
       <p>
         We’re donating $5 to the Global Fund for every purchase made with
-        Apple Pay at Apple. Through 12/8
+        Apple Pay at Apple. Through 12/8.
       </p>
     </section>
   </body>
